--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: angrybunny
-Title: What the Package Does (One Line, Title Case)
+Title: Make Regular Expressions More Exciting
 Version: 0.0.0.9000
 Authors@R: 
     person("Jennifer", "Bryan", , "jenny@posit.co", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-6983-2759"))
-Description: What the package does (one paragraph).
+Description: Convenience functions to make some common tasks with string
+    manipulation and regular expressions a bit easier.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
