Depend on stringr, rename the function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,5 @@ BugReports: https://github.com/jennybc/angrybunny/issues
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Imports: 
+    stringr
